--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button class="rock-btn">Rock</button>
+    <button class="paper-btn">Paper</button>
+    <button class="scissors-btn">Scissors</button>
     <script src="script.js"></script>
   </body>
 </html>
