--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <button class="rock-btn">Rock</button>
     <button class="paper-btn">Paper</button>
     <button class="scissors-btn">Scissors</button>
+    <div class="human-score">0</div>
+    <div class="computer-score">0</div>
+    <div class="result"></div>
     <script src="script.js"></script>
   </body>
 </html>
