--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button class="rock-btn">Rock</button>
-    <button class="paper-btn">Paper</button>
-    <button class="scissors-btn">Scissors</button>
-    <div class="human-score">0</div>
-    <div class="computer-score">0</div>
-    <div class="result"></div>
+    <div class="outer-container">
+      <div class="inner-container">
+        <h1 class="primary-heading">A Game of Rock Paper Scissors</h1>
+        <h2 class="secondary-heading">Choose from the below</h2>
+        <button class="rock-btn">Rock</button>
+        <button class="paper-btn">Paper</button>
+        <button class="scissors-btn">Scissors</button>
+        <div class="human-score-holder">
+          Your Score:
+          <div class="human-score">0</div>
+        </div>
+        <div class="computer-score-holder">
+          Computer Score:
+          <div class="computer-score">0</div>
+        </div>
+        <div class="result"></div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
