Add a button to reset the game

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <div class="computer-score">0</div>
         </div>
         <div class="result"></div>
+        <button class="reset-button">Reset</button>
       </div>
     </div>
     <script src="script.js"></script>
