--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="outer-container">
       <div class="inner-container">
-        <h1 class="primary-heading">A Game of Rock Paper Scissors</h1>
+        <h1 class="primary-heading">A Rock Paper Scissors Game</h1>
         <h2 class="secondary-heading">Choose from the below</h2>
         <button class="rock-btn">Rock</button>
         <button class="paper-btn">Paper</button>
@@ -22,7 +22,7 @@
           Computer Score:
           <div class="computer-score">0</div>
         </div>
-        <div class="result"></div>
+        <div class="result">Your result will appear here</div>
         <button class="reset-button">Reset</button>
       </div>
     </div>
